--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
